--- a/style.css
+++ b/style.css
@@ -1,5 +1,34 @@
-.div{
+  
+#out{
+  font-family: Arial, Helvetica, sans-serif;
   margin : auto;
   width :  80%;
   border : 4px solid #ff0000;
+  text-align: justify;
+  text-justify: inter-word;
+  font-size: 25px;
+}
+
+#h1{
+	text-align: center;
+}
+.wrap{
+	text-align: center; 
+}
+.button{
+	position: relative;
+	background-color: #555555;
+	color: white;
+  padding: 15px 32px;
+  top:10px;
+}
+
+#div1{
+	top:100px;
+  text-align: center;
+	position: relative;
+	margin : auto;
+  width :  80%;
+  border : 4px solid #000000;
+  font-size: 30px;
 }
